--- a/ChatFront/ChatFront/Pages/Index.cshtml
+++ b/ChatFront/ChatFront/Pages/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@page
 <div class="container">
+    <select id="group">
+      <option value="All">Everyone</option>
+      <option value="Myself">Myself</option>
+    </select>
     <div class="row p-1">
         <div class="col-1">User</div>
         <div class="col-5"><input type="text" id="userInput" /></div>
